# freesiege

./: CMakeLists.txt  EMSCRIPTEN.md  README  README.md  anims.cfg  fight.cpp  freesiege.cpp  freesiege.desktop  sprites.cfg
common/: config.h  options.cpp  options.h  utils.cpp
engine/: CMakeLists.txt  anim.cpp  anim.h  gamepad.cpp  gamepad.h  musiccollection.cpp  sprite.cpp  sprite.h  spritecollection.cpp  spritecollection.h
gui/: CMakeLists.txt  battlefield.cpp  battlefield.h  board.cpp  board.h  boardabstract.cpp  boardabstract.h  boardnetwork.cpp  boardnetwork.h  boardsurvivor.cpp  boardsurvivor.h  combinaisonscreen.cpp  combinaisonscreen.h  gameclient.h  gamescreen.cpp  gamescreen.h  lifebar.cpp  lifebar.h  menu.cpp  menu.h  menuscreen.cpp  menuscreen.h  trainingscreen.cpp  trainingscreen.h
units/: dragon.cpp  dragon.h  druid.h  explosion.h  golem.h  knight.h  plant.h  ram.cpp  ram.h  soldier.cpp  soldier.h  veteran.h
xcf/: free.xcf  logo.blend  siege.xcf
