PROJECT(freesiege)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_ROOT}/Modules/FindSDL.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_mixer.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_ttf.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_image.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_net.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindOpenGL.cmake)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDLIMAGE_INCLUDE_DIR})
if(${SDLNET_FOUND})
    INCLUDE_DIRECTORIES(${SDLNET_INCLUDE_DIR})
endif(${SDLNET_FOUND})
INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDLTTF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

INCLUDE(common/CMakeLists.txt)
INCLUDE(engine/CMakeLists.txt)
INCLUDE(gui/CMakeLists.txt)
INCLUDE(units/CMakeLists.txt)

SET(FS_ALL_SRCS
    ${FS_COMMON_SRCS}
    ${FS_ENGINE_SRCS}
    ${FS_GUI_SRCS}
    ${FS_UNITS_SRCS}
)

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O2")

OPTION(NET_ENABLED "Assume Freesiege will be compiled with network support" OFF)

OPTION(COMPILE_FOR_PACKAGE "Assume Freesiege will be installed to /usr/bin and /usr/share" OFF)
IF(COMPILE_FOR_PACKAGE)
	ADD_DEFINITIONS(-DFREESIEGE_DATA_DIR="${CMAKE_INSTALL_PREFIX}/share/freesiege/")
	ADD_DEFINITIONS(-DFREESIEGE_ICON_PATH="${CMAKE_INSTALL_PREFIX}/share/icons/freesiege.png")
ELSE(COMPILE_FOR_PACKAGE)
    ADD_DEFINITIONS(-DFREESIEGE_ICON_PATH="freesiege.png")
ENDIF(COMPILE_FOR_PACKAGE)

IF(CMAKE_BUILD_TYPE MATCHES Debug)
	ADD_EXECUTABLE(fight fight.cpp ${FS_ALL_SRCS})
	TARGET_LINK_LIBRARIES(fight  ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLNET_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

ADD_EXECUTABLE(freesiege freesiege.cpp ${FS_ALL_SRCS})

IF(NET_ENABLED)
IF(SDLNET_FOUND)
	ADD_DEFINITIONS(-DNET_SUPPORT)
	MESSAGE( STATUS "Network enabled" )
	TARGET_LINK_LIBRARIES(freesiege ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLNET_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})
ELSE(SDLNET_FOUND)
	MESSAGE( STATUS "Network disabled" )
	TARGET_LINK_LIBRARIES(freesiege ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})
ENDIF(SDLNET_FOUND)
ELSE(NET_ENABLED)
	MESSAGE( STATUS "Network disabled" )
	TARGET_LINK_LIBRARIES(freesiege ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})
ENDIF(NET_ENABLED)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/sprites DESTINATION share/freesiege/)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/sounds DESTINATION share/freesiege/)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/anims DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/combi.cfg DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/sprites.cfg DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/anims.cfg DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/musics.cfg DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/Swift.ttf DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/Swift_license.txt DESTINATION share/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/README DESTINATION share/licences/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/COPYING DESTINATION share/licences/freesiege/)
install(FILES ${PROJECT_SOURCE_DIR}/freesiege.png DESTINATION share/icons/)
install(FILES ${PROJECT_SOURCE_DIR}/freesiege.desktop DESTINATION share/applications)
install(TARGETS freesiege RUNTIME DESTINATION bin)
